src/objects/CorreoMarketing__c.object
<CustomObject>
    <fields>
        <fullName>AlgunOtroComentario__c</fullName>
        <label>¿Algún otro comentario que quisieras dar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CALLENUMEROSMAY__c</fullName>
        <formula>UPPER( CalleNumeros__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CALLE Y NÚMEROS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIUDADMAY__c</fullName>
        <formula>UPPER(  Ciudad__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIUDAD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLONIAMAY__c</fullName>
        <formula>UPPER(  Colonia__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COLONIA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPMAY__c</fullName>
        <formula>UPPER(  CP__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <label>Cp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalleNumerosFormula__c</fullName>
        <formula>IF(ISBLANK(Poliza__r.Account.Numero_Interior__c ), 
Poliza__r.Account.BillingStreet &amp; &quot;, &quot; &amp;  Poliza__r.Account.Numero_Exterior__c, 
Poliza__r.Account.BillingStreet &amp; &quot;, &quot; &amp;  Poliza__r.Account.Numero_Exterior__c &amp; &quot;, &quot; &amp;&quot;N° Interior&quot; &amp; &quot; &quot; &amp;  Poliza__r.Account.Numero_Interior__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle y Números Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalleNumeros__c</fullName>
        <label>Calle y Números</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Correo Marketing</relationshipLabel>
        <relationshipName>CorreoMarketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colonia__c</fullName>
        <label>Colonia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contestada__c</fullName>
        <formula>IF(  VigenciaInvitacion__c   &gt;= 1, &quot;Si&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contestada</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorreoCliente__c</fullName>
        <label>Correo cliente</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Correo_Contratante__c</fullName>
        <formula>Poliza__r.CorreodelCliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo Contratante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CuentaBlueTooth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite saber si el dispositivo del cliente tiene bluetooth</description>
        <label>¿Cuenta con bluetooth?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CuentaDispositivoAndroid__c</fullName>
        <description>Permite saber si el cliente que participa en la campaña de Cool Drive tiene dispositivo Android</description>
        <label>¿Cuenta con dispositivo Android?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Correo Marketing</relationshipLabel>
        <relationshipName>Correo_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiasDesdeUltimoUso__c</fullName>
        <formula>today() -  FechaUltimoUso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días desde último uso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DireccionContratante__c</fullName>
        <formula>Poliza__r.DireccionContratante__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DireccionContratante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DireccionEnvioVIT__c</fullName>
        <description>Dirección a la que será enviada el VIT, proceso de cool drive</description>
        <label>Dirección envío VIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DispositivosVIT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permite identificar el número de dispositivo VIT que se debe asignar</description>
        <label>Dispositivos VIT</label>
        <referenceTo>DispositivosVIT__c</referenceTo>
        <relationshipLabel>Correo Marketing</relationshipLabel>
        <relationshipName>Correo_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENTRECALLEMAY__c</fullName>
        <formula>UPPER(  EntreCalle__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ENTRE CALLES</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESTADOMAY__c</fullName>
        <formula>UPPER(  Estado__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESTADO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EncuestaDatosMKTCreado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EncuestaDatosMKTCreado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EntreCalle__c</fullName>
        <label>Entre calle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnvioVITDireccionAsociada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite saber si el dispositivo sera enviado a la dirección asociada</description>
        <label>¿Envio de VIT a dirección asociada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstaUsandoDispositivo__c</fullName>
        <label>Esta usando el dispositivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstatusClipert__c</fullName>
        <formula>TEXT(Poliza__r.ESTATUS_CLIPERT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estatus Clipert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstatusCorreoBienvenidaCoolDrive__c</fullName>
        <label>Estatus Correo Bienvenida Cool Drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Enviado</fullName>
                    <default>true</default>
                    <label>No Enviado</label>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>No Abierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstatusCorreo__c</fullName>
        <description>Permite conocer el estatus de envió del correo electrónico</description>
        <label>Estatus correo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No enviado</fullName>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>No abierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FechaBienvenida__c</fullName>
        <description>Contiene la fecha en la que se debe enviar la carta de bienvenida</description>
        <label>Fecha de Bienvenida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaEntregaDispositivo__c</fullName>
        <description>Fecha en la que se entrego el dispositivo al cliente</description>
        <label>Fecha de entrega dispositivo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaParticipacion__c</fullName>
        <label>Fecha de Participación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaUltimoUso__c</fullName>
        <description>Fecha en la que se uso por ultima vez el dispositivo</description>
        <label>Fecha de último uso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FolioVIT__c</fullName>
        <displayFormat>VIT-{0000}</displayFormat>
        <label>Folio VIT</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HorasTranscurridasVerificacion__c</fullName>
        <formula>((NOW() - CreatedDate) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horas transcurridas verificación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDCliente__c</fullName>
        <formula>Poliza__r.Account.ClienteID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdCorreoMarketing__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Correo Marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListoEnvioMKTCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listo envio MKT cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MotivoNoParticipaCool__c</fullName>
        <label>Motivo de no participar en Cool Drive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NoCaso__c</fullName>
        <label>No caso</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoPoliza__c</fullName>
        <label>No Póliza</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreAjustador__c</fullName>
        <label>Nombre Ajustador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreClienteEspejo__c</fullName>
        <formula>IF(Poliza__r.Account.IsPersonAccount, 
Poliza__r.Account.FirstName, 
Poliza__r.Account.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NombreClienteEspejo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreCliente__c</fullName>
        <formula>IF(Poliza__r.Account.IsPersonAccount, 
Poliza__r.Account.FirstName, 
Poliza__r.Account.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NombreCliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroEncuesta__c</fullName>
        <label>Número de Encuesta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroPoliza__c</fullName>
        <formula>Poliza__r.NumerodePoliza__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumeroPoliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAISMAY__c</fullName>
        <formula>UPPER( Pais__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAÍS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>País</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParticipaCoolDrive__c</fullName>
        <description>Permite identificar si el cliente va a participar en la campaña de cool dirve</description>
        <label>Participa cool drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poliza__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permite saber la oportunidad con la que se esta relacionando el correo</description>
        <label>Poliza</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Correo Marketing</relationshipLabel>
        <relationshipName>Correo_Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PorqueNoParticipaCool__c</fullName>
        <label>Por qué no participa en cool drive?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequiereVIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Requiere VIT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusEntregaVIT__c</fullName>
        <description>Identifica el estado de entrega del dispositivo VIT</description>
        <label>Status entrega VIT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entrega programada</fullName>
                </value>
                <value>
                    <fullName>En proceso de entrega</fullName>
                </value>
                <value>
                    <fullName>Entregado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipoDispositivo__c</fullName>
        <label>Tipo dispositivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipoProceso__c</fullName>
        <description>Permite saber el proceso al que pertenece el envio de correo</description>
        <label>Tipo de proceso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Verificación Digital</fullName>
                </value>
                <value>
                    <fullName>Cool Drive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TipoProducto__c</fullName>
        <formula>TEXT( Poliza__r.Producto__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VigenciaInvitacion__c</fullName>
        <formula>NOW()-  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vigencia de Invitación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Correo Marketing</label>
    <nameField>
        <displayFormat>CMC-{00000000}</displayFormat>
        <label>Nombre de Correo Marketing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correo Marketing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>